[project]
name = "comfyui-caching-embeddings"
description = "This repository simply caches the CLIP embeddings and subtly accelerates the inference process by bypassing unnecessary computations."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/discus0434/comfyui-caching-embeddings"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-caching-embeddings"
Icon = ""
